# dog-walker-compose

./: .dockerignore  .env.example  .gitignore  CHANGES.md  CLAUDE.md  DOCKERHUB.md  DOCKERHUB.web.md  Dockerfile.tunnel  Dockerfile.web  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-web.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_display_name.py  0003_add_walk_created_at.py
scripts/: migrate_sqlite_to_mysql.py
src/bot/: config.py  handlers.py  i18n.py  keyboards.py  main.py  notifications.py  scheduler.py  utils.py
src/database/: crud.py  models.py  session.py
src/web/: config.py  database.py  main.py  queries.py  routes.py
src/web/templates/: dashboard.html
tests/: test_i18n.py  test_keyboards.py  test_time_parser.py
